--- a/ide/src/main/resources/style/code-editor-pane.css
+++ b/ide/src/main/resources/style/code-editor-pane.css
@@ -3,33 +3,40 @@
 /* https://github.com/FXMisc/RichTextFX/wiki/RichTextFX-CSS-Reference-Guide */
 
 .keyword {
-    -fx-fill: purple;
+    -fx-fill: rgb(0,0,128);
     -fx-font-weight: bold;
 }
-.semicolon {
-    -fx-font-weight: bold;
-}
-.paren {
-    -fx-fill: firebrick;
-    -fx-font-weight: bold;
-}
-.bracket {
-    -fx-fill: darkgreen;
-    -fx-font-weight: bold;
-}
-.brace {
-    -fx-fill: teal;
-    -fx-font-weight: bold;
-}
+
 .string {
-    -fx-fill: #3C8731;
+    -fx-fill: rgb(0,128,0);
     -fx-font-weight: bold;
 }
 
 .comment {
-	-fx-fill: #808080;
+	-fx-fill: rgb(128,128,128);
 }
 
 .paragraph-box:has-caret {
-    -fx-background-color: #f2f9fc;
+    -fx-background-color: #f9fbe7;
 }
+
+.styled-text-area {
+    -fx-font-size: 14;
+}
+
+/*.paren {
+    -fx-fill: firebrick;
+    -fx-font-weight: bold;
+}
+
+.bracket {
+    -fx-fill: darkgreen;
+    -fx-font-weight: bold;
+}
+
+.brace {
+    -fx-fill: teal;
+    -fx-font-weight: bold;
+}*/
+
+
