ide:refactor(ActionPane): reimplemented using finite state machine

--- a/ide/src/main/resources/javafx/main-window.fxml
+++ b/ide/src/main/resources/javafx/main-window.fxml
@@ -18,9 +18,9 @@
 
 -->
 
-<?import com.revenat.javamm.ide.ui.pane.ActionPane?>
-<?import com.revenat.javamm.ide.ui.pane.CodeTabPane?>
-<?import com.revenat.javamm.ide.ui.pane.ConsolePane?>
+<?import com.revenat.javamm.ide.ui.pane.action.ActionPane?>
+<?import com.revenat.javamm.ide.ui.pane.code.CodeTabPane?>
+<?import com.revenat.javamm.ide.ui.pane.console.ConsolePane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.BorderPane?>
 
